--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "@babel/cli": "^7.21.0",
     "@babel/core": "^7.21.0",
     "@babel/preset-env": "^7.20.2",
-    "jest": "^29.4.3"
+    "jest": "^29.4.3",
+    "typescript": "^4.9.5"
   },
   "name": "journey_through_javascript",
   "version": "1.0.0",
