--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@babel/cli": "^7.21.0",
     "@babel/core": "^7.21.0",
     "@babel/preset-env": "^7.20.2",
+    "@types/node-fetch": "^2.6.2",
     "jest": "^29.4.3",
     "typescript": "^4.9.5"
   },
@@ -132,6 +133,7 @@
     "minimatch": "^3.1.2",
     "ms": "^2.1.2",
     "natural-compare": "^1.4.0",
+    "node-fetch": "^2.6.9",
     "node-int64": "^0.4.0",
     "node-releases": "^2.0.10",
     "normalize-path": "^3.0.0",
